# fastflow-python

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.example  Makefile  README.md  bindings.cpp  fastflow_module.cpp  fastflow_subint.cpp  fastflow_subint_module.cpp  ff_const_bindings.hpp  ff_minode_bindings.hpp  ff_monode_bindings.hpp  ff_node_bindings.hpp  ff_pipeline_bindings.hpp  gil_test_timings.txt  globals.py  init.sh  obj.py  parallel.py  pipeline.py  pyproject.toml  res.txt  setup.py  test.txt  test_ff_send_out.py  updatedocker.sh
.github/workflows/: build_wheels.yml
benchmark/: dummydata.py  introspection.py  single_exec.py  single_exec_python.py  subint.py
benchmark/busy_wait/: busy_wait.pyx.old  install.sh
benchmark/farm/: bench.py  farm_512_1000ms.txt  farm_512_500ms.txt  farm_512_50ms.txt
examples/: a2a.py  destructor.py  dynamictypes.py  farm.py  gil_test.py  process.py  simplepipeline.py  simplest.py  subint.py  test_multi_input4.py  test_multi_input5.py
fastflow/: CMakeLists.txt  __init__.pyi
fastflow/tests/: CMakeLists.txt
include/: building_blocks_utils.hpp  debugging.hpp  error_macros.hpp  ff_const_bindings.hpp  ff_minode_bindings.hpp  ff_monode_bindings.hpp  ff_node_bindings.hpp  ff_pipeline_bindings.hpp  log.hpp  node_utils.hpp  pickle.hpp  py_ff_a2a.fwd.hpp  py_ff_a2a.hpp  py_ff_callback.hpp  py_ff_constant.hpp  py_ff_farm.hpp  py_ff_node.hpp  py_ff_node_process.hpp  py_ff_node_subint.hpp  py_ff_pipeline.hpp  python_utils.hpp
include/process/: base_process.hpp  messaging.hpp
include/subint/: base_subint.hpp
notebook/: jupyter.sh  plot.ipynb  pullnotebook.sh  run.sh  test.py  times_farm_processes.txt  times_farm_subint.txt
subint/: CMakeLists.txt  parallel.py  parallelbindings.cpp
thesis/: bench.ipynb  bench_many_ms.ipynb  benchbytes.ipynb  servicetime.ipynb  with-numpy.ipynb  with-numpy.py  zerodivision.ipynb
(+55 files in other folders)
