[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastflow"
version = "1.0.0"
requires-python = ">= 3.8"
authors = [
  {name = "Domenico Ferraro", email = "ferraro.domenico125@gmail.com"},
]
maintainers = [
  {name = "Domenico Ferraro", email = "ferraro.domenico125@gmail.com"},
]
description = "Unlock the full potential of parallel computing in Python with FastFlow, a powerful C++ library now available in Python, that brings high-performance, scalable parallelism right to your fingertips."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

[tool.cibuildwheel]
# Disable building PyPy wheels on all platforms and skip 32-bit builds
skip = ["pp*", "*-manylinux_i686", "*-musllinux_i686"]